[workspace]
default-members = ["bin/relayx"]
members = ["bin/relayx", "crates/rpc"]
resolver = "2"
exclude = ["book/cli"]

[workspace.package]
authors = ["https://github.com/etherspot/relayx/graphs/contributors"]
edition = "2024"
keywords = ["ethereum", "okx-relayer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/relayx/relayx"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }

#relayx dependencies
relayx-rpc = { path = "crates/rpc" }
